# frame-processor

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_processing_jobs.py  0002_processing_pipeline.py  0003_app_settings.py  0004_adjustment_panel.py  0005_adjustment_jobs.py  0006_adjustment_versions.py  0007_batch_versions.py  0008_cpl_look.py  0009_chroma_clean.py  0010_detail_preserve.py
api/: config.py  database.py  main.py  queue.py  schemas.py
api/routers/: adjustments.py  exports.py  photos.py  processing.py  processing_jobs.py  projects.py  settings.py
deploy/: api.Dockerfile  docker-compose.local.yml  docker-compose.yml  nginx.conf  web.Dockerfile
docs/: preview-ux-audit.md
docs/adr/: 0002-bundled-v0.2.0-processing.md  0003-batch-versioning.md  0004-gpu-worker-split.md
docs/superpowers/specs/: 2026-05-13-preset-ux-redesign-design.md
models/: __init__.py  adjustment_job.py  adjustment_preset.py  adjustment_version.py  app_setting.py  enums.py  export.py  photo.py  photo_adjustment.py  photo_processing_version.py  processing_job.py  project.py
openspec/changes/2026-05-07-v0.2.0-processing-pipeline/: design.md  proposal.md
openspec/changes/2026-05-07-v0.2.2-settings-api-key-import/: proposal.md  tasks.md
openspec/changes/2026-05-07-v0.3.0-adjustment-panel/: proposal.md  tasks.md
openspec/changes/2026-05-07-walking-skeleton/: design.md  proposal.md
openspec/changes/2026-05-10-batch-version-control/: design.md  proposal.md  tasks.md
openspec/changes/2026-05-11-car-interior-cpl-look/: tasks.md
openspec/changes/add-frame-ci-cd/: design.md  proposal.md  tasks.md
openspec/changes/add-frame-error-reporting-frontend/: proposal.md  tasks.md
services/: adjustment_renderer.py  adjustments.py  auto_crop.py  chroma_clean.py  color_grade.py  cpl_look.py  denoise.py  detail_preserve.py  lens_distort.py  level_correct.py  photo_processor.py  processing_versions.py  settings_store.py  storage.py  zip_export.py
skills/deployment/: SKILL.md
tests/: test_adjustments_clear.py  test_adjustments_preview.py  test_export_payload.py  test_level_correct.py  test_project_detail.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/scripts/: geometry-crop.test.ts  pipeline-preview.test.ts  test-geometry-crop.cjs  test-pipeline-preview.cjs  test-processing-version-label.cjs  test-time-format.cjs
web/src/: App.tsx  index.css  main.tsx  types.ts  version.ts  vite-env.d.ts
worker/: jobs.py  main.py
(+84 files in other folders)
