[project]
name = "frame-processor"
version = "0.5.14"
description = "車輛照片批次後製工具（FastAPI + React + RQ worker）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "rq>=1.16",
    "Pillow>=10.4",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "torch>=2.2",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "models*", "services*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# vendored template content from skill-creator — not part of product code
extend-exclude = ["skills/skill-creator"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# Project-wide intentional patterns:
# - E501: long lines OK (CN docstrings)
# - RUF002 / RUF003: 全形標點符號（中文 docstring / comment）刻意保留
# - B008: FastAPI 慣用 `Depends(...)` 在預設值
# - UP042: SQLAlchemy enum 需要 `str, Enum` 雙繼承方便 PG ENUM 對應
# - UP007 / UP017 / UP035: 留給日後一次性 modernize commit，不在 v0.2.0 內處理
ignore = [
    "E501",
    "RUF002",
    "RUF003",
    "B008",
    "UP042",
    "UP007",
    "UP017",
    "UP035",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
